@@ -138,15 +138,7 @@ public:
   NDArray array_value (bool = false) const
     { return NDArray (dim_vector (1, 1), scalar); }
 
-  octave_value resize (const dim_vector& dv) const
-    {
-      NDArray retval (dv);
-
-      if (dv.numel ())
-	retval(0) = scalar;
-
-      return retval;
-    }
+  octave_value resize (const dim_vector& dv, bool fill = false) const;
 
   Complex complex_value (bool = false) const { return scalar; }
 
