@@ -1,3 +1,10 @@
+2006-04-02  David Bateman  <dbateman@free.fr>
+
+	* general/tril.m, general.triu.m:
+	Use resize (resize (x, 0), nr, nc) rather than zeros (nr, nc)
+	to allow user types to work correctly.
+	* special-matrix/hankel.m, special-matrix/toeplitz.m: Ditto.
+
 2006-04-03  David Bateman  <dbateman@free.fr>
 
 	* plot/grid.m: Cache the state of the grid to allow toggling.
